Fixed CSS and cropped image more

--- a/public/css/stark.css
+++ b/public/css/stark.css
@@ -51,7 +51,13 @@ a.tile {
   padding: 0 8px;
 }
 a.tile:hover {
-  background: rgba(0,0,0,0.05);
+  /*background: rgba(0,0,0,0.05);*/
+}
+a.tile:hover p,
+a.tile:hover h1,
+a.tile:hover h2 {
+  transition: all 0.2s;
+  color: #000000;
 }
 
 h1 { color: #EEE; font-size: 1.8em; letter-spacing: 0.02em; line-height: 1.4; margin: 1em 0 0.6em 0; text-shadow: 1px 1px 2px black; }
@@ -116,13 +122,13 @@ header nav ul.left li {
 }
 header nav ul li a {
   display: inline-block;
-  padding: 16px 16px 12px 16px;
+  padding: 16px 16px 16px 16px;
   border: none;
   transition: all 0.2s;
-  color: #333;
+  color: #555;
 }
 header nav ul li a:visited {
-  color: #333;
+  color: #555;
 }
 header nav ul li a:hover {
   text-decoration: none;
@@ -163,7 +169,7 @@ section#atf .atf-content {
   justify-content: center;
   align-items: center;
   width: 100%;
-  background: rgba(0,0,0,0.4);
+  background: linear-gradient(0,rgba(0,0,0,0.6), rgba(0,0,0,0));
   padding: 8px 0;
 }
 
